--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
+        <link rel="icon" href="img/By Cooked.jpg">
 </head>
 
 <body class="registros">
@@ -47,9 +48,9 @@
                     <label for="preferencia_input">Preferência</label>
                     <select id="preferencia_input" name="tipoReceita">
                         <option value="">Selecione</option>
-                        <option value="salgada">Salgada</option>
-                        <option value="doce">Doce</option>
-                        <option value="vegetariana">Vegetariana</option>
+                        <option value="Salgada">Salgada</option>
+                        <option value="Doce">Doce</option>
+                        <option value="Vegetariana">Vegetariana</option>
                     </select>
 
                     <button onclick="cadastrar()">Cadastrar</button>
