--- a/public/favoritas.html
+++ b/public/favoritas.html
@@ -124,7 +124,7 @@
             "Hamburguer de falafel": "./receitas/falafel.html"
         };
 
-        return caminho[nomeReceita] || "#";
+        return caminho[nomeReceita];
     }
 
 
